@startuml
skinparam linetype ortho

title Package Diagram

package "DAO" {
  class AdminastrorsDAO
  class InstructorsDAO
  class InstructorOfferingsDAO
  class LocationsDAO
  class OfferingsDAO
  class OrganizationsDAO
}

package "models" {
    class Account
    class Adminastrors
    class Instructor
    class Locations
    class Offerings
    class Organizations
} 

package "services" {
    class AdminastrorService
    class GuestService
    class InstructorService
    class Mysqlcon
    class RegistrationService
}

package "CLI" {
  class InstructorMenu
  class LoginMenu
  class MainMenu
  class RegistrationMenu
  class AdminMenu
}

class Driver

Driver -> DAO
Driver --> models
Driver --> services
Driver -> CLI

@enduml
